# xara

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: build_cmake.yml  workflow.yml
OTHER/: CMakeLists.txt
OTHER/UMFPACK/: CMakeLists.txt  umf_analyze.c  umf_assemble.c  umf_blas3_update.c  umf_create_element.c  umf_extend_front.c  umf_local_search.c  umf_scale_column.c  umfpack_get_numeric.c
OTHER/arpack-ng/: CMakeLists.txt
SRC/: CMakeLists.txt
SRC/actor/objectBroker/: FEM_ObjectBroker.h  FEM_ObjectBrokerAllClasses.cpp
SRC/analysis/algorithm/: CMakeLists.txt
SRC/analysis/analysis/: CMakeLists.txt
SRC/analysis/dof_grp/: TransformationDOF_Group.cpp
SRC/analysis/integrator/: commands.cpp
SRC/analysis/model/: AnalysisModel.cpp
SRC/api/: elementAPI.h
SRC/coordTransformation/: CorotCrdTransf2d.cpp  CorotCrdTransf2d.h  CorotCrdTransfWarping2d.cpp  CorotCrdTransfWarping2d.h  CorotCrdTransfWarping3d.cpp  CrdTransf.h  FrameTransform.h  FrameTransform.tpp  LinearCrdTransf2d.cpp  LinearCrdTransf2d.h  LinearCrdTransf2d02.cpp  LinearCrdTransf2d02.h  LinearCrdTransf2dInt.cpp  LinearCrdTransf2dInt.h  LinearShearTransf2d.cpp  LinearShearTransf2d.h  PDeltaCrdTransf2d.cpp  PDeltaCrdTransf2d.h
SRC/coordTransformation/Frame/: BasicFrameTransf.cpp  BasicFrameTransf.h  BasicFrameTransf.tpp  CMakeLists.txt  CorotFrameTransf3d.cpp  CorotFrameTransf3d03.cpp  CorotFrameTransf3d03.h  LinearFrameTransf.hpp  LinearFrameTransf.tpp  LinearFrameTransf3d.cpp  LinearFrameTransf3d.h  PDeltaFrameTransf3d.cpp  PDeltaFrameTransf3d.hpp  RigidFrameTransf.hpp  RigidFrameTransf.tpp  SouzaFrameTransf.hpp  SouzaFrameTransf.tpp
SRC/coordTransformation/Shell/: ASDShellQ4Transformation.h  ASDShellT3CorotationalTransformation.h
SRC/damage/: CMakeLists.txt  DamageModel.cpp  DamageModel.h  NormalizedPeak.cpp  commands.cpp
SRC/damping/: URDDampingbeta.cpp
SRC/database/: FileDatastore.cpp
SRC/domain/component/: MaterialStageParameter.cpp  Parameter.cpp
SRC/domain/constraints/: MP_Constraint.cpp  SP_Constraint.cpp  SP_Constraint.h
SRC/domain/domain/: Domain.cpp
SRC/domain/load/: Beam2dPointLoad.cpp  Beam2dUniformLoad.cpp  ElementalLoadIter.cpp  NodalLoadIter.h  NodalThermalAction.cpp  NodalThermalAction.h  ShellThermalAction.h
SRC/domain/node/: NodalLoad.cpp  NodalLoad.h  Node.cpp
SRC/domain/partitioner/: DomainPartitioner.cpp
SRC/domain/pattern/: FireLoadPattern.h  LoadPattern.cpp  LoadPattern.h  MultiSupportPattern.cpp  MultiSupportPattern.h  UniformExcitation.cpp  UniformExcitation.h
SRC/domain/subdomain/: ShadowSubdomain.cpp  ShadowSubdomain.h
SRC/element/: Element.cpp  Element.h  ElementalLoad.h  isoparametric.tpp
SRC/element/Boundary/: RockingBC.cpp
SRC/element/Brick/: BBarBrickUP.cpp  BBarBrickUP.h  BbarBrick.cpp  BbarBrick.h  BbarBrickWithSensitivity.cpp  BbarBrickWithSensitivity.h  Brick.cpp  Brick.h  BrickUP.cpp  BrickUP.h  TwentyNodeBrick.cpp  TwentyNodeBrick.h  Twenty_Eight_Node_BrickUP.cpp  Twenty_Eight_Node_BrickUP.h  Twenty_Node_Brick.cpp  Twenty_Node_Brick.h  dispatch.cpp
SRC/element/Cable/: CatenaryCable.cpp
SRC/element/Frame/: BasicFrame3d.cpp  BasicFrame3d.h  CubicFrame3d.cpp  CubicFrame3d.h  EulerDeltaFrame3d.cpp  EulerFrame3d.cpp  EulerFrame3d.h  ExactFrame3d.h  ExactFrame3d.tpp  FiniteElement.h  ForceDeltaFrame3d.h  ForceDeltaFrame3d.tpp  ForceFrame3d.cpp  ForceFrame3d.h  ForceFrame3d.tpp  FrameLoad.h  FrameMass.hpp  MixedFrame3d.cpp  PrismFrame3d.cpp  PrismFrame3d.h  PrismShearFrame3d.cpp  commands.cpp  for_int.tpp
SRC/element/IGA/: IGAKLShell.cpp  IGAKLShell.h  IGAKLShell_BendingStrip.cpp  IGAKLShell_BendingStrip.h
SRC/element/Joint/: ElasticTubularJoint.cpp  Joint2D.cpp  LehighJoint2d.cpp  dispatch.cpp
SRC/element/Link/: LinearElasticSpring.cpp  TwoNodeLink.cpp  TwoNodeLinkSection.cpp  commands.cpp
SRC/element/Plane/: BBarFourNodeQuadUP.cpp  CMakeLists.txt  ConstantPressureVolumeQuad.cpp  ConstantPressureVolumeQuad.h  EightNodeQuad.cpp  EightNodeQuad.h  EnhancedQuad.cpp  EnhancedQuad.h  FourNodeQuad.cpp  FourNodeQuad.h  FourNodeQuadUP.cpp  FourNodeQuadUP.h  FourNodeQuadWithSensitivity.cpp  IGAQuad.cpp  LagrangeQuad.tpp  NineNodeMixedQuad.cpp  NineNodeQuad.cpp  NineNodeQuad.h  SixNodeTri.cpp  TaylorHood2D.cpp  Tri31.cpp  (+2 more)
SRC/handler/: ConsoleErrorHandler.h  ErrorHandler.cpp  ErrorHandler.h  XmlFileStream.cpp  XmlFileStream.h
SRC/interpolate/: cbdi.cpp  shp3d.cpp  shp3dv.cpp
SRC/logging/: G3_Logging.h  logging.cpp
SRC/material/: CMakeLists.txt  commands.cpp
SRC/material/Plane/: CMakeLists.txt  J2PlaneStrain.cpp  J2PlaneStrain.h  J2PlaneStress.cpp  J2PlaneStress.h  PlaneStrainMaterial.cpp  PlaneStrainMaterial.h  PlaneStressMaterial.cpp  PlaneStressRebarMaterial.cpp  PlaneStressSimplifiedJ2.cpp  PlaneStressSimplifiedJ2.h  PlaneStressUserMaterial.cpp  PlaneStressUserMaterial.h
SRC/material/Plane/reinforcedConcretePlaneStress/: ConcreteL01.cpp  ConcreteL01.h  ConcreteZ01.cpp  ConcreteZ01.h  FAFourSteelPCPlaneStress.cpp  FAFourSteelPCPlaneStress.h  FAFourSteelRCPlaneStress.cpp  FAFourSteelRCPlaneStress.h  FAPrestressedConcretePlaneStress.cpp  FAPrestressedConcretePlaneStress.h  FAReinforcedConcretePlaneStress.cpp  FAReinforcedConcretePlaneStress.h  PrestressedConcretePlaneStress.cpp  PrestressedConcretePlaneStress.h  RAFourSteelPCPlaneStress.cpp  RAFourSteelPCPlaneStress.h  RAFourSteelRCPlaneStress.cpp  RAFourSteelRCPlaneStress.h  ReinforcedConcretePlaneStress.cpp  ReinforcedConcretePlaneStress.h  SteelZ01.cpp  SteelZ01.h  TendonL01.cpp  TendonL01.h
SRC/matrix/: Cholesky.tpp  Exponential.h  MatrixND.h  Projector.hh  Vector.h  VectorND.h  VectorND.tpp
SRC/opensees/: openseespy.py
SRC/quadrature/: GaussLegendre1D.hpp  GaussLobatto1D.hpp  GaussLobatto2D.hpp
SRC/recorder/: ElementRecorder.cpp  EnvelopeNodeRecorder.cpp
SRC/runtime/: OpenSeesRT.cpp
SRC/xara/: helpers.py
about/: FEATURES.md  compiling.md
binder/: cc
tests/Community/: PlaneStressSimplifiedJ2.tcl  ZeroLengthImpact3D_test.tcl
tests/Verification/: README.md
tests/python/: test_surface.py  test_units.py
(+516 files in other folders)
